--- a/src/components/schema/classesList.html
+++ b/src/components/schema/classesList.html
@@ -18,7 +18,7 @@
              class="table table-striped table-bordered table-hover table-condensed pointer table-schema">
         <thead>
         <th colspan="10" class="hidden">
-          <input st-search="" ng-model="$ctrl.queryFilter" placeholder="Search class"
+          <input st-search="" ng-model="$ctrl.query" placeholder="Search class"
                  class="input-sm form-control "
                  type="text"/>
         </th>
