--- a/src/views/hints/query-hint.html
+++ b/src/views/hints/query-hint.html
@@ -1,37 +1,44 @@
 <div class="popover">
-    <div class="popover-content">
-
-        <div class="row">
-            <div class="col-md-12">
-                <ul>
-                    <li>
-                        <b>Run:</b>
-                        Ctrl + Return
-                    </li>
-                    <li>
-                        <b>Undo:</b>
-                        Ctrl/Cmd + Z
-                    </li>
-                    <li>
-                        <b>Redo:</b>
-                        Ctrl/Cmd + Shift + Z
-                    </li>
-                    <li>
-                        <b>Search :</b>
-                        Ctrl/Cmd + F
-                    </li>
-                    <li>
-                        <b>Toggle Comment:</b>
-                        Ctrl/Cmd + /
-                    </li>
-                    <li>
-                        <b>Autocomplete:</b>
-                        Ctrl + Space
-                    </li>
-                </ul>
-            </div>
-        </div>
+  <div class="popover-content">
+    <div class="row">
+      <div class="col-md-12">
+        <ul>
+          <li>
+            <b>Run:</b>
+            Ctrl + Return
+          </li>
+          <li>
+            <b>Undo:</b>
+            Ctrl/Cmd + Z
+          </li>
+          <li>
+            <b>Redo:</b>
+            Ctrl/Cmd + Shift + Z
+          </li>
+          <li>
+            <b>Search :</b>
+            Ctrl/Cmd + F
+          </li>
+          <li>
+            <b>Toggle Comment:</b>
+            Ctrl/Cmd + /
+          </li>
+          <li>
+            <b>Autocomplete:</b>
+            Ctrl + Space
+          </li>
+          <li>
+            <b>History Up:</b>
+            Alt + Up
+          </li>
+          <li>
+            <b>History Down:</b>
+            Alt + Down
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
 </div>
 
 
