Added Keyborad shortcuts in Graph Editor

--- a/src/views/database/graph/graph.html
+++ b/src/views/database/graph/graph.html
@@ -172,36 +172,15 @@
                   <div class="container-fluid">
                     <div class="row vertical-align">
                       <div class="col-md-10  info">
-                        <div class="query-hint-mobile">
-                          <a class="btn btn-trasparent ng-scope" tabindex="1" data-trigger="focus"
-                             data-placement="bottom-left" data-animation="am-flip-x" data-container="body"
-                             data-template-url="views/hints/query-hint.html" bs-popover="">
-                            <i class="fa fa-question-circle"></i>
+                        <div class="query-hint">
+                          <a class="btn btn-trasparent" tabindex="1"
+                             data-trigger="hover" data-placement="bottom-left"
+                             data-animation="am-flip-x"
+                             data-container="body"
+                             data-template-url="views/hints/query-hint.html" bs-popover>
+                            <i class="fa fa-keyboard-o fa-lg"> </i>
                           </a>
                         </div>
-                        <div class="query-hint">
-                          <div class="row">
-                            <div class="col-md-12">
-                              <b>Run:</b>
-                              Ctrl + Return
-                              <b>Undo:</b>
-                              Ctrl/Cmd + Z
-                              <b>Redo:</b>
-                              Ctrl/Cmd + Shift + Z
-                              <br>
-                              <b class="clear-hint">
-                                Search :</b>
-                              Ctrl/Cmd + F
-                              <b>
-                                Toggle Comment:</b>
-                              Ctrl/Cmd + /
-                              <b>
-                                Autocomplete:</b>
-                              Ctrl + Space
-                            </div>
-                          </div>
-                        </div>
-
                       </div>
                       <div class="col-md-2 command">
 
