Added new buttons (hint and testConnection) to step 5. Cleaned up all the fields.

--- a/src/app/administration/teleporter/teleporter.component.html
+++ b/src/app/administration/teleporter/teleporter.component.html
@@ -254,6 +254,21 @@
             </div>
           </div>
 
+          <br><br><br>
+
+          <div class="form-group">
+            <div class="col-sm-offset-9 col-sm-3">
+              <button type="button" class="btn btn-sm btn-primary" data-toggle="popover" data-placement="top" data-html="true"
+                      [attr.data-content]="hints.tableList" data-animation="am-fade-and-scale"><b>?</b></button>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-offset-9 col-sm-3">
+                <button type="button" class="btn btn-sm btn-primary" (click)="testConnection()">Test connection</button>
+            </div>
+          </div>
+
           <br><br><br><br>
 
           <div class="form-group">
