Scheduler component prepared for dev.

--- a/src/app/administration/teleporter/teleporter.component.html
+++ b/src/app/administration/teleporter/teleporter.component.html
@@ -8,7 +8,7 @@
 
   <div *ngIf="agentService.agent.active">
 
-    <form class="form-horizontal" id="teleporterForm" name="teleporterForm" #form="ngForm"> {{message}}
+    <form class="form-horizontal" id="teleporterForm" name="teleporterForm" #form="ngForm">
 
       <div id="stepSwitch" [ngSwitch]="getStep()">
 
