--- a/src/views/database/graph/asideEdge.html
+++ b/src/views/database/graph/asideEdge.html
@@ -3,17 +3,17 @@
     <ul class="nav nav-pills nav-justified nav-pills-aside">
       <li ng-class="{active : 'properties' == active }"><a href="javascript:void(0)"
                                                            ng-click="active = 'properties'"
-      ><i class="fa fa-bars"></i></a></li>
+      ><i class="fa fa-bars"></i>Properties</a></li>
       <li ng-class="{active : 'settings' == active }"><a href="javascript:void(0)"
                                                          ng-click="active = 'settings'"><i
-        class="fa fa-cog"></i></a>
+        class="fa fa-cog"></i>Settings</a>
       </li>
     </ul>
   </div>
   <div class="row">
-    <h5 class="text-center title-tab" ng-show="doc">
-      {{ active | capitalize}}
-    </h5>
+    <!--<h5 class="text-center title-tab" ng-show="doc">-->
+      <!--{{ active | capitalize}}-->
+    <!--</h5>-->
     <h5 class="text-center title-tab" ng-hide="doc">
       No properties (lightweight edge)
     </h5>
@@ -40,16 +40,34 @@
 
           <div class="col-md-6">
             <select ng-model="config.display" id="inputDisplay"
-                    ng-options="h for h in headers">
+                    ng-options="h for h in headers" class="form-control input-sm">
 
             </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputDisplayExp" class="col-md-6 control-label">
+            Display Template
+            <i class="fa fa-question-circle pointer"
+               data-trigger="hover" data-placement="bottom-left"
+               data-animation="am-flip-x"
+               data-container="body"
+               data-template-url="views/hints/template-hint.html" bs-popover>
+            </i>
+            <!--</a>-->
+          </label>
+
+          <div class="col-md-6">
+
+            <input type="text" id="inputDisplayExp" ng-model="config.displayExpression" class="form-control input-sm"
+                   ng-change="setDirty()">
           </div>
         </div>
         <div class="form-group">
           <label for="inputRadius" class="col-md-6 control-label">Stroke Width</label>
 
           <div class="col-md-6">
-            <input id="inputRadius" ng-model="config.strokeWidth" class="form-control">
+            <input id="inputRadius" ng-model="config.strokeWidth" class="form-control input-sm">
           </div>
         </div>
         <div class="form-group">
